--- a/partials/campsite-view.html
+++ b/partials/campsite-view.html
@@ -18,12 +18,8 @@
             <p>Latitude: <span>{{coordinates.lat}}</span></p>
             <p>Longitude: <span>{{coordinates.lng}}</span></p>
             <div class="btn-box">
-                <a ng-click="deleteCampsite(campsite.campsiteId)">
-                    <button class="btn btn-default btn-accent">Delete<span class="glyphicon glyphicon-trash
-" aria-hidden="true"></span></button>
-                </a>
                 <a ng-click="editing = true;">
-                    <button class="btn btn-default btn-accent" ng-show="!editing">Edit</button>
+                    <button class="btn btn-default btn-accent" ng-show="!editing">Edit Campsite<i class="material-icons">edit</i></button>
                 </a>
             </div>
         </div>
@@ -69,63 +65,61 @@
     </div>
 
     <!--End of first panel-->
-    <div class="edit-campsite col l7" ng-show="editing">
+    <div class="edit-campsite" ng-show="editing">
         <!-- <form class="form-group"> -->
         <div class="input-box">
-            <div class="no-space">
-                <div class="">
-                    <label>Campsite Name</label>
-                    <input type="text" class="form-control" placeholder="Campsite Name" ng-model="editedCampsite.campsiteName" ng-required="required"
-                    />
-                </div>
-                <div class="Area">
-                    <label>Area</label>
-                    <input type="text" class="form-control" placeholder="Area" ng-model="editedCampsite.area" ng-required="required" />
-                </div>
-                <div class="">
-                    <label>Type</label>
-                    <input type="text" class="form-control" placeholder="Type" ng-model="editedCampsite.type" />
-                </div>
-                <div class="">
-                    <label>Latitude</label>
-                    <input type="text" class="form-control" placeholder="Latitude" ng-model="editedCampsite.latitude" />
-                </div>
+            <div class="input-field">
+                <input type="text" class="" placeholder="Campsite Name" ng-model="editedCampsite.campsiteName" ng-required="required" />
+                <label>Campsite Name</label>
             </div>
-            <div class="no-space">
-                <div class="">
-                    <label>Longitude</label>
-                    <input type="text" class="form-control" placeholder="Longitude" ng-model="editedCampsite.longitude" />
-                </div>
-                <div class="">
-                    <label>Fee</label>
-                    <input type="text" class="form-control" placeholder="Fee" ng-model="editedCampsite.fee" />
-                </div>
-                <div class="">
-                    <label>Bathrooms</label>
-                    <input type="text" class="form-control" placeholder="Bathrooms" ng-model="editedCampsite.bathrooms" />
-                </div>
-                <div class="">
-                    <label>Features</label>
-                    <input type="text" class="form-control" placeholder="Features" ng-model="editedCampsite.features" />
-                </div>
+            <div class="input-field">
+                <label>Area</label>
+                <input type="text" class="" placeholder="Area" ng-model="editedCampsite.area" ng-required="required" />
             </div>
-            <div class="row">
-                <div class="">
-                    <div class="form-group">
-                        <label for="exampleInputFile">Image</label>
-                        <input type="file" ng-model="file" name="file" base-sixty-four-input onload="onLoad" accept="image/*">
-                        <button class="btn btn-warning" ng-click="itemSave()" ng-disabled="!file.base64">Upload Image</button>
-                        <div id="editMap"></div>
-                    </div>
-                    <div class="">
-                        <label>Review</label>
-                        <input type="textarea" class="form-control" placeholder="Write a review" ng-model="editedCampsite.review" />
-                    </div>
-                    <button class="btn btn-default" ng-click="editing = false; editCampsite()">Save</button>
-                    <button class="btn btn-default" ng-click="editing = false;">Close</button>
-                </div>
+            <div class="input-field">
+                <label>Type</label>
+                <input type="text" class="" placeholder="Type" ng-model="editedCampsite.type" />
+            </div>
+            <div class="input-field">
+                <label>Latitude</label>
+                <input type="text" class="" placeholder="Latitude" ng-model="editedCampsite.latitude" />
+            </div>
+
+            <div class="input-field">
+                <input type="text" class="" placeholder="Longitude" ng-model="editedCampsite.longitude" />
+                <label>Longitude</label>
+            </div>
+            <div class="input-field">
+                <input type="text" class="" placeholder="Fee" ng-model="editedCampsite.fee" />
+                <label>Fee</label>
+            </div>
+            <div class="input-field">
+                <input type="text" class="" placeholder="Bathrooms" ng-model="editedCampsite.bathrooms" />
+                <label>Bathrooms</label>
+            </div>
+            <div class="input-field">
+                <input type="text" class="" placeholder="Features" ng-model="editedCampsite.features" />
+                <label>Features</label>
             </div>
         </div>
-        <!-- </form> -->
+        <div class="input-field">
+                <textarea type="textarea" class="materialize-textarea" placeholder="Write a review" ng-model="editedCampsite.review"></textarea>
+                <label>Review</label>
+            </div>
+        <div class="form-bottom-box">
+            <div class="upload-box">
+                <label for="exampleInputFile">Image</label>
+                <input type="file" ng-model="file" name="file" base-sixty-four-input onload="onLoad" accept="image/*">
+                <button class="btn btn-warning" ng-click="itemSave()" ng-disabled="!file.base64">Upload Image</button>
+                <div id="editMap"></div>
+            </div>
+
+            <button class="btn btn-default" ng-click="editing = false; editCampsite()">Save</button>
+            <button class="btn btn-default" ng-click="editing = false;">Close</button>
+            <a ng-click="deleteCampsite(campsite.campsiteId)">
+              <button class="btn btn-default btn-accent">Delete Campsite<i class="material-icons">delete</i></button>
+            </a>
+
+        </div>
     </div>
 </div>
