--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 nav {
     height: 150px;
     margin-bottom: 0;
+    padding-bottom: 20px;
 }
 
 .nav-flex{
@@ -173,6 +174,28 @@ nav {
 
 .campsites-box {
     margin: 10px 0px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 400px);
+    align-items: center;
+    //justify-content: space-around;
+    // display: flex;
+    // flex-direction: row;
+    // justify-content: space-between;
+    // align-items: center;
+}
+.card-themed{
+    margin: 20px;
+    // max-width: 500px ;
+}
+.card-title-themed{
+    background-color: $primary;
+    color: white !important;
+    padding: 7px !important;
+    font-family: 'Rubik Mono One', sans-serif;
+    a{
+        color: white !important;
+    }
+
 }
 
 .add-park, .add-campsite {
@@ -208,6 +231,11 @@ nav {
 
 .park_img_upload{
 
+}
+
+.park-list-grid{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(15ch, 1fr));
 }
 
 .park-title-box {
@@ -307,7 +335,7 @@ nav {
             font-size: 20px;
             color: $accent;
             font-weight: bold;
-            max-width: 400px;
+            max-width: 370px;
             overflow-wrap: break-word;
         }
 
@@ -326,15 +354,19 @@ nav {
 
     }
     
-    a{
-        text-align: center;
-    }
     .btn-box{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-around;
-        flex-wrap: wrap;
         margin: 15px;
+        button{
+            text-align: center;
+            font-size: 12px;
+            color: $primary;
+            width: 100%;
+            vertical-align: middle;
+            i{
+                vertical-align: middle;
+                margin: 4px 4px 5px 4px;
+            }
+        }
     }
 }
 
@@ -342,19 +374,22 @@ nav {
     height: auto;
     color: white;
     background-color: $secondary;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    flex-grow: 1;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: flex-start;
+    // flex-grow: 1;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr; 
     &> * {
         padding: 15px;
         border-bottom: 4px solid $primary;
-        height: 33.33%
+        //height: 33.33%
     }
     .review-box {
         min-height: 20%;
         //overflow: auto;
         p {
+            margin: 0;
             font-size: 15px;
         }
     }
@@ -398,17 +433,23 @@ nav {
             justify-content: space-between;
             align-content: center;
             & p{
-                margin: 0;
+                margin: 10px;
             }
             & p:nth-of-type(odd){
                 font-size: 30px;
             }
             & p:nth-of-type(even){
                 background-color: $accent; 
+                color: $primary;
             }
         }
     }
 
+}
+
+.edit-campsite{
+    background-color: $secondary;
+    padding: 25px;
 }
 
 // Switch from Grid to Flexbox on tablet size or smaller
@@ -425,6 +466,10 @@ nav {
     width: auto;
     margin: 5px;
 }
+.input-box{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
 
 .input-box input {
     max-width: 300px;
@@ -438,6 +483,10 @@ nav {
 
 .boxy-inline {
     display: inline-block;
+}
+
+.form-bottom-box{
+    margin: 25px 0px;;
 }
 
 .uploadedImage {
@@ -471,9 +520,9 @@ nav {
 
 
 #blankMap, #editMap {
-    height: 250px;
+    min-height: 250px;
     //max-height: 50%;
-    width: 400px;
+    width: 100%;
 }
 
 .form-group label {
