--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,7 @@
 nav {
   height: 150px;
-  margin-bottom: 0; }
+  margin-bottom: 0;
+  padding-bottom: 20px; }
 
 .nav-flex {
   display: flex;
@@ -131,7 +132,21 @@ nav {
   margin-bottom: 15px; }
 
 .campsites-box {
-  margin: 10px 0px; }
+  margin: 10px 0px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 400px);
+  align-items: center; }
+
+.card-themed {
+  margin: 20px; }
+
+.card-title-themed {
+  background-color: #1F445F;
+  color: white !important;
+  padding: 7px !important;
+  font-family: 'Rubik Mono One', sans-serif; }
+  .card-title-themed a {
+    color: white !important; }
 
 .add-park, .add-campsite {
   margin: 10px 17px;
@@ -157,6 +172,10 @@ nav {
     flex-grow: 1; }
     .add-park_submit button, .add-campsite_submit button {
       margin: 5px; }
+
+.park-list-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(15ch, 1fr)); }
 
 .park-title-box h3,
 .park-title-box p {
@@ -225,7 +244,7 @@ nav {
     font-size: 20px;
     color: #FFB81C;
     font-weight: bold;
-    max-width: 400px;
+    max-width: 370px;
     overflow-wrap: break-word; }
   .campsite-view_infobox .campsite-view_details span {
     color: white;
@@ -236,30 +255,31 @@ nav {
     width: 100%;
     height: auto;
     border: 2px solid #1F445F; }
-  .campsite-view_infobox a {
-    text-align: center; }
   .campsite-view_infobox .btn-box {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    flex-wrap: wrap;
     margin: 15px; }
+    .campsite-view_infobox .btn-box button {
+      text-align: center;
+      font-size: 12px;
+      color: #1F445F;
+      width: 100%;
+      vertical-align: middle; }
+      .campsite-view_infobox .btn-box button i {
+        vertical-align: middle;
+        margin: 4px 4px 5px 4px; }
 
 .campsite-view_main-box {
   height: auto;
   color: white;
   background-color: #312F2F;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  flex-grow: 1; }
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr; }
   .campsite-view_main-box > * {
     padding: 15px;
-    border-bottom: 4px solid #1F445F;
-    height: 33.33%; }
+    border-bottom: 4px solid #1F445F; }
   .campsite-view_main-box .review-box {
     min-height: 20%; }
     .campsite-view_main-box .review-box p {
+      margin: 0;
       font-size: 15px; }
   .campsite-view_main-box .comment-box {
     height: auto; }
@@ -287,11 +307,16 @@ nav {
       justify-content: space-between;
       align-content: center; }
       .campsite-view_main-box .bottom-box .coordinates p {
-        margin: 0; }
+        margin: 10px; }
       .campsite-view_main-box .bottom-box .coordinates p:nth-of-type(odd) {
         font-size: 30px; }
       .campsite-view_main-box .bottom-box .coordinates p:nth-of-type(even) {
-        background-color: #FFB81C; }
+        background-color: #FFB81C;
+        color: #1F445F; }
+
+.edit-campsite {
+  background-color: #312F2F;
+  padding: 25px; }
 
 @media (max-width: 770px) {
   .campsite-wrapper {
@@ -303,6 +328,10 @@ nav {
   width: auto;
   margin: 5px; }
 
+.input-box {
+  display: grid;
+  grid-template-columns: 1fr 1fr; }
+
 .input-box input {
   max-width: 300px; }
 
@@ -313,6 +342,9 @@ nav {
 
 .boxy-inline {
   display: inline-block; }
+
+.form-bottom-box {
+  margin: 25px 0px; }
 
 .uploadedImage {
   height: 140px;
@@ -335,8 +367,8 @@ nav {
   max-width: 600px; }
 
 #blankMap, #editMap {
-  height: 250px;
-  width: 400px; }
+  min-height: 250px;
+  width: 100%; }
 
 .form-group label {
   color: white; }
