Campsite View is fully responsive

--- a/partials/campsite-view.html
+++ b/partials/campsite-view.html
@@ -56,7 +56,7 @@
                   		</a>
                 </p>
             </div>
-            <div class="">
+            <div class="submit-box">
                 <input type="text" class="" placeholder="Write a comment..." ng-model="newComment.text" />
                 <button class="btn btn-default btn-accent boxy-inline" ng-click="addComment(newComment)">Submit</button>
             </div>
